clusters/z01/ask/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: askd
  namespace: cllm
  labels:
    app.kubernetes.io/name: askd
spec:
  selector:
    app: askd
  ports:
    - name: http
      port: 8008
      targetPort: http
