clusters/z01/ask/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: askd
  namespace: cllm
spec:
  entryPoints:
    - ask
  routes:
    - match: PathPrefix(`/`)
      kind: Rule
      services:
        - name: askd
          port: 8008
